Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>The first project as a software engineer and ready to share it with you. </p>
